--- a/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/base.html
+++ b/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/base.html
@@ -73,14 +73,9 @@
                   <a class="nav-link" href="/analysis/">Analysis</a>
                 </li>
               {% endblock %}
-              {% block navbar-compare %}
-                <li class="nav-item">
-                  <a class="nav-link" href="/compare/">Compare</a>
-                </li>
-              {% endblock %}
               {% block navbar-sitemap %}
                 <li class="nav-item">
-                  <a class="nav-link" href="/site-map/site-locations/"> Site Map </a>
+                  <a class="nav-link" href="/spatial-analysis/site-locations/"> Spatial Analysis </a>
                 </li>
               {% endblock %}
             </ul>
@@ -133,7 +128,6 @@
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
       <script src="https://code.highcharts.com/highcharts.js"></script>
       <script src="https://code.highcharts.com/maps/modules/map.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/jstat@latest/dist/jstat.min.js"></script>
     {% endblock %}
   </body>
 </html>
