--- a/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/site-map.html
+++ b/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/site-map.html
@@ -1,6 +1,6 @@
 {% extends 'main/base.html' %}
 
-{% block title %} Site Map {% endblock %}
+{% block title %} {% if view == 'site-locations' %} Site Locations {% else %} Data Visualization - {{field.title}}{% endif %} {% endblock %}
 
 {% block links %} 
     <link rel="stylesheet" href="https://js.arcgis.com/4.18/esri/css/main.css"> 
@@ -12,50 +12,13 @@
     html, body, #viewDiv {
         padding: 0;
         margin: 0;
-        height: 650px;
+        height: 670px;
         width: 100%;
     }
     .esri-view-width-xlarge .esri-popup__main-container,
     .esri-view-width-large .esri-popup__main-container,
-    .esri-view-width-medium .esri-popup__main-container{max-height: 4000px !important;}
+    .esri-view-width-medium .esri-popup__main-container{max-height: 400px !important;}
 
-    .btns {
-        margin: 0 auto;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        overflow: auto;
-        height: 5rem;
-      }
-
-      .btn-switch {
-        display: flex;
-        justify-content: center;
-        background-color: rgba(34, 111, 14, 0.5);
-        border: 2px solid green;
-        border-radius: 15px;
-        color: #fff;
-        margin: 1px;
-        width: 50%;
-        text-align: center;
-        cursor: pointer;
-        height: 4em;
-        line-height: 3.8em;
-      }
-      .btn-switch:hover {
-        display: flex;
-        justify-content: center;
-        border: 2px solid green;
-        border-radius: 15px;
-        color: #fff;
-        margin: 1px;
-        width: 50%;
-        text-align: center;
-        cursor: pointer;
-        height: 4em;
-        line-height: 3.8em;
-      }
       .active-map {
         color: #fff;
         background-color: rgba(34, 111, 14, 1);
@@ -68,26 +31,26 @@
 
 {% block navbar-sitemap %}
     <li class="nav-item active">
-        <a class="nav-link" href="/site-map/site-locations/"> Site Map <span class="sr-only">(current)</span> </a>
+        <a class="nav-link" href="/site-map/site-locations/"> Spatial Analysis <span class="sr-only">(current)</span> </a>
     </li>
 {% endblock %}
 
 {% block content %}
 <div style="margin-top: 1rem; margin-left: 18.5rem; margin-right: 18.5rem; width: 100%;">
-<h1> Site Map </h1>
-<div class="btns">
-        {% if view == 'site-locations' %} <div class="btn-switch active-map">Site Locations</div>{% else %}<a class="btn-switch" href="/site-map/site-locations/"><div>Site Locations</div></a>{% endif %}
-        {% if view == 'data' %}           <div class="btn-switch active-map">Data</div>{% else %}<a class="btn-switch" href="/site-map/data/"><div>Data</div></a>{% endif %}
-        {% if view == 'timeseries-data' %}<div class="btn-switch active-map">Timeseries Data</div>{% else %}<a class="btn-switch" href="/site-map/timeseries-data/"><div>Timeseries Data</div></a>{% endif %}
-
+<h1> Spatial Analysis </h1>
+<div style="display:flex;justify-content:left;align-items:center; margin-bottom: 0.25rem;">
+        {% if view == 'site-locations' %} <a href='/spatial-analysis/site-locations/'><button class="btn btn-success btn-lg active">Site Locations</button></a>
+            {% else %}<a href="/spatial-analysis/site-locations/"><button class="btn btn-outline-success btn-lg">Site Locations</button></a>{% endif %}
+        {% if view != 'site-locations' %} <a style="margin-left: 1em;" href='/map-dataselect/'><button class="btn btn-success btn-lg active">Data Visualization</button></a>
+            {% else %}<a style="margin-left: 1em;" href="/map-dataselect/"><button class="btn btn-outline-success btn-lg">Data Visualization</button></a>{% endif %}
 </div>
 <div id="viewDiv"> </div>
 
 <script src="https://js.arcgis.com/4.18/"></script>
 <script>
     require(["esri/config", "esri/Map", "esri/views/MapView", "esri/layers/CSVLayer", "esri/widgets/Legend", "esri/symbols/SimpleMarkerSymbol", "esri/symbols/SimpleLineSymbol",
-            "esri/widgets/Home"], 
-    function (esriConfig, Map, MapView, CSVLayer, Legend, SimpleMarkerSymbol, SimpleLineSymbol, Home) {
+            "esri/widgets/Home", "esri/layers/support/Field"], 
+    function (esriConfig, Map, MapView, CSVLayer, Legend, SimpleMarkerSymbol, SimpleLineSymbol, Home, Field) {
     esriConfig.apiKey = "AAPKfb00003515d74e4184b4384e710571f8Lji43BB09iGFEFMip7j44M4B671KaSuiU7a8hLDUzpLRvglkpSZkDc3G0NeJYEVi";    
     
     // POPUP TEMPLATES
@@ -100,49 +63,60 @@
                                                                     {fieldName: "dominant_species", label: "Dominant Species"},
                                                                     {fieldName: "first_im_date", label: "First Image Taken"},
                                                                     {fieldName: "last_im_date", label: "Most Recent Image Taken"},]},
-                                                    {type: 'text', text: "<small>Last upadated {last_updated}</small>"}],};
+                                                    {type: 'text', text: "<small>Last upadated {last_updated}</small>"}],
+                                        };
 
-    // LAYERS and MAPS and VIEWS and VISUALS
+    
+    
     {% if view == 'site-locations' %}
         var greenOutline = {type: 'simple-line', color: [38, 115, 0, 1], width: 1.75};
-        var pathMarker = {type: "simple-marker", size: 26, outline: greenOutline, color: [56, 168, 0, 0.55], angle: 0,
+        var pathMarker = {type: "simple-marker", size: 26, outline: greenOutline, color: [56, 168, 0, 0.55], angle: 0, 
                     path: "M16,3.5c-4.142,0-7.5,3.358-7.5,7.5c0,4.143,7.5,18.121,7.5,18.121S23.5,15.143,23.5,11C23.5,6.858,20.143,3.5,16,3.5z M16,14.584c-1.979,0-3.584-1.604-3.584-3.584S14.021,7.416,16,7.416S19.584,9.021,19.584,11S17.979,14.584,16,14.584z"};
-        var metaRenderer = {type: "simple", symbol: pathMarker}
+        var metaRenderer = {type: "simple", symbol: pathMarker, label: "Location of Site from Database",}
+
         const metaLayer = new CSVLayer({
             url: "http://127.0.0.1:8000/static/mapdata.csv",
             renderer: metaRenderer,
             title: "Phenology Analysis",
             popupTemplate: generalMetadataPopupTemplate,
+            fields: [new Field({name: 'sitename', alias: "Site", type: "string"})]
         });
+
         var map = new Map({basemap: "topo-vector", layers: [metaLayer]});
-        var view = new MapView({map: map, center: [-99.3268, 38.8792], zoom: 4, container: "viewDiv"})
-        var metaLegend = new Legend({view: view, layerInfos: [{layer: metaLayer, title: "Phenology Analysis Tool"}]})
+        var view = new MapView({map: map, center: [-84.3268, 38.0], zoom: 4, container: "viewDiv"})
+       
+        var metaLegend = new Legend({view: view, layerInfos: [{layer: metaLayer, title: "Site Locations"}]})
         view.ui.add(metaLegend, "bottom-left");
         view.ui.add(new Home({view: view}), "top-left");
-    {% endif %}
-
-    {% if view == 'timeseries-data' %}
-
-    {% endif %}
-    
-    {% if view == 'data' %}
-        const defaultSym = {type: "simple-marker", color: [56, 168, 0, 0.75], outline: {color: [38, 115, 0, 1], width: 1}, size: 5};
-        var dataDrivenRenderer = {type: 'simple', symbol: defaultSym, label: "label", visualVariables: [
-            {type: "color", field:"value", normalizationField: "maxValue", stops: [{value: 0.1, color: "#FFFCD4", label: "x<=0.1"}, {value: 0.3, color: "#350242", label:"x>0.3"}]},
-            {type: "size", field:"value", normalizationField: "maxValue", stops: [{value: 0.1, size: 5, label: "x<=0.1"}, {value: 0.3, size: 15, label:"x>0.3"}]},]}
-        const dataLayer = new CSVLayer({
+    {% else %}
+        const defaultSym = {type: "simple-marker", color: [0, 0, 0, 0.0], outline: {color: [0, 0, 0, 1], width: 1}, size: 5};
+        
+        var map = new Map({basemap: "topo-vector", layers: []});
+        var view = new MapView({map: map, center: [-84.3268, 38.0], zoom: 5, container: "viewDiv"})               
+                
+        var {{field.field}}Renderer = {type: 'simple', symbol: defaultSym, visualVariables: [
+            {type: "color", field:"{{field.field}}", normalizationField: "{{field.max_field}}", 
+                legendOptions: {title: "{{field.legend_description}}"}, 
+                stops: [{value: {{field.min}}/{{field.max}}, color: "#FFFCD4", label: "{{field.min_label}} {{field.unit}}"}, 
+                        {value: 1.0, color: "#350242", label:"{{field.max_label}} {{field.unit}}"}]},
+            {type: "size", field:"{{field.field}}", normalizationField: "{{field.max_field}}", 
+                legendOptions: {title: ""}, 
+                stops: [{value: {{field.min}}/{{field.max}}, size: 7, label: "{{field.min_label}} {{field.unit}}"}, 
+                        {value: 1.0, size: 25, label:"{{field.max_label}} {{field.unit}}"}]},]}
+        const {{field.field}}Layer = new CSVLayer({
             url: "http://127.0.0.1:8000/static/mapdata.csv",
-            renderer: dataDrivenRenderer,
+            renderer: {{field.field}}Renderer,
             title: "Phenology Analysis Sites",
-            popupTemplate: generalMetadataPopupTemplate
+            popupTemplate: generalMetadataPopupTemplate, 
+            id: "{{field.field}}",
+            visible: true
         });
-        var map = new Map({basemap: "topo-vector", layers: [dataLayer]});
-        var view = new MapView({map: map, center: [-99.3268, 38.8792], zoom: 4, container: "viewDiv"})
-        var metaLegend = new Legend({view: view, layerInfos: [{layer: dataLayer, title: "Phenology Analysis Tool"}]})
-        view.ui.add(metaLegend, "bottom-left");
+        map.add({{field.field}}Layer)
+        var {{field.field}}Legend = new Legend({view: view, layerInfos: [{layer: {{field.field}}Layer, title: "{{field.title}}"}]})
+        view.ui.add({{field.field}}Legend, "bottom-left");       
+
         view.ui.add(new Home({view: view}), "top-left");
     {% endif %}
-
     });
 </script>
 
