--- a/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/site_list.html
+++ b/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/site_list.html
@@ -19,7 +19,7 @@
                 <tr> 
                     <th scope="col" style='padding-right: 12rem;'>Site </th>
                     <th scope='col'>Location</th>
-                    <th scope='col'>Lattitude</th>
+                    <th scope='col'>Latitude</th>
                     <th scope='col'>Longitude</th>
                     <th scope="col">Last Updated</th>
                 </tr> 
