--- a/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/base.html
+++ b/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/base.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     {% load static %}
-    <link rel='stylesheet' type='text/css' href={% static 'bootstrap.min.css' %}/>
+    <link rel='stylesheet' type='text/css' href={% static 'bootstrap.css' %}/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
         
@@ -56,7 +56,7 @@
     <div id="page-container">
       <header id='header'>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="height: 4rem;">
-          <a class="navbar-brand" href='/' style="">Phenology Scientific Analysis Tool</a>
+          <a class="navbar-brand" href='/' style="margin-right: 3.7rem;">Phenology Analysis Suite &ensp;<i class="fas fa-leaf"></i> </a>
           <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -69,7 +69,7 @@
               {% endblock %}
               {% block navbar-analysis %}
                 <li class="nav-item">
-                  <a class="nav-link" href="/analysis/">Analysis</a>
+                  <a class="nav-link" href="/analysis/">Site Analysis</a>
                 </li>
               {% endblock %}
               {% block navbar-overall-analysis %}
@@ -86,7 +86,7 @@
 
             <ul class="nav navbar-nav navbar-right">
               <li class="dropdown" style="margin-right: 15px;">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" style="font-weight: bold;">+<span class="caret"></span></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fas fa-plus fa-sm"></i><span class="caret"></span></a>
                 <ul class="dropdown-menu" style="white-space: normal; right: 0; left: auto;">
                   <a class="dropdown-item" href="/data-management/sites/add/">Add New Site</a>
                   <a class="dropdown-item" href="/data-management/upload_images/">Upload Images</a></li>
